k8s/scraper-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: scraper
  namespace: newsai
spec:
  ports:
    - port: 8001
  selector:
    app: scraper
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: scraper
  namespace: newsai
spec:
  replicas: 1
  selector:
    matchLabels:
      app: scraper
  template:
    metadata:
      labels:
        app: scraper
    spec:
      containers:
        - name: scraper
          image: newsai-scraper:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 8001
